# user-service

user-service-main/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
user-service-main/alembic/: env.py
user-service-main/alembic/versions/: 4e2f40d95523_initial_user_and_preference_tables.py
user-service-main/app/: main.py
user-service-main/app/api/v1/routes/: auth.py  users.py
user-service-main/app/core/: settings.py
user-service-main/app/db/: cache.py  database.py  models.py
user-service-main/app/schemas/: response.py  token.py  user.py
user-service-main/app/services/: metrics.py  security.py
user-service-main/tests/: conftest.py  test_auth.py  test_users.py
